# OctoPrint-NavbarTemp

./: .eslintrc.yaml  .gitignore  .pre-commit-config.yaml  .prettierignore  README.md  requirements.txt  setup.cfg  setup.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build.yml
octoprint_navbartemp/: __init__.py
octoprint_navbartemp/libs/: sbc.py
octoprint_navbartemp/static/css/: navbartemp.css
octoprint_navbartemp/static/js/: navbartemp.js
octoprint_navbartemp/static/less/: navbartemp.less
octoprint_navbartemp/templates/: navbartemp_navbar.jinja2  navbartemp_settings.jinja2  navbartemp_settings_custom.jinja2  navbartemp_settings_raspi.jinja2  navbartemp_settings_sbc.jinja2
